src/blocks/form/style.scss
/**
 * #.# Editor Styles
 *
 * CSS for just Backend enqueued after style.scss
 * which makes it higher in priority.
 */
 .wp-block-kadence-form {
    margin-bottom: 30px;
}
.kb-form-align-center .kb-form {
    justify-content: center;
	text-align: center;
}
.kb-form-align-right .kb-form {
    justify-content: flex-end;
	text-align: right;
}

 .kb-form {
	display: flex;
	flex-wrap: wrap;
	margin: 0 -5px;
	align-items: flex-end;
	position: relative;
	.required {
		color: #E53E3E;
		margin-left: 5px;
	}
	.kadence-blocks-form-field {
		box-sizing: border-box;
		padding: 0 5px;
		margin-bottom: 16px;
		flex-wrap: wrap;
		justify-content: inherit;
		text-align: inherit;
		align-items: center;
		display: flex;
		width: 100%;

		&.kb-field-desk-width-20 {
			width:20%;
		}
		&.kb-field-desk-width-25 {
			width:25%;
		}
		&.kb-field-desk-width-33 {
			width:33.33%;
		}
		&.kb-field-desk-width-40 {
			width:40%;
		}
		&.kb-field-desk-width-50 {
			width:50%;
		}
		&.kb-field-desk-width-60 {
			width:60%;
		}
		&.kb-field-desk-width-66 {
			width:66.66%;
		}
		&.kb-field-desk-width-75 {
			width:75%;
		}
		&.kb-field-desk-width-80 {
			width:80%;
		}
		&.kb-field-desk-width-unset {
			width:auto;
		}
		&.kb-submit-field {
			margin-bottom: 0;
		}
		&.kb-accept-form-field {
			align-items: flex-start;
			.kb-checkbox-style {
				margin: 0.5rem 0.5rem 0 0;
			}
			.kb-checkbox-style ~ label {
				width: calc(100% - 1.8em);
			}
		}
		label {
			display: block;
			line-height: 1.8;
		}
		.kb-checkbox-style, .kb-radio-style {
			padding: 0;
			background-color: initial;
			cursor: default;
			-webkit-appearance: auto;
			appearance: auto;
			box-sizing: border-box;
			margin: 3px 5px 3px 0;
			border-color: var( --global-gray-500, #818a91 );
			box-shadow: none;
			width:auto;
			flex:none;
			&:before {
				display:none;
			}
		}
		.kb-select-style-field {
			color: var( --global-palette4, #373a3c );
			border: 1px solid var( --global-gray-500, #818a91 );
			border-radius: 3px;
			padding: 10px 12px;
			min-height: 40px;
			flex-basis: 100%;
			max-width: 100%;
			width: 100%;
			flex-grow: 1;
			vertical-align: middle;
			-webkit-appearance: menulist;
			appearance: menulist;
			background:initial;
			cursor: pointer;
		}
		&.kb-input-size-small {
			.kb-select-style-field {
				min-height: 28px;
			}
		}
		&.kb-input-size-large {
			.kb-select-style-field {
				min-height: 60px;
			}
		}
		.kb-select-style-field[multiple] {
			-webkit-appearance: listbox;
			appearance: listbox;
			height: auto;
			max-height: 70px;
		}
		.kb-text-style-field {
			flex-basis: 100%;
			max-width: 100%;
			width: 100%;
			border: 1px solid var( --global-gray-500, #818a91 );
			background-color: var( --global-palette9, #fff );
			color: var( --global-palette4, #373a3c );
			vertical-align: middle;
			flex-grow: 1;
			z-index: 10;
			min-height: 40px;
			padding: 10px 12px;
			border-radius: 3px;
		}
		.kb-checkbox-style-field, .kb-radio-style-field {
			flex-basis: 100%;
			max-width: 100%;
			width: 100%;
			flex-grow: 1;
			margin-top: 0.3em;
			&.kb-radio-style-inline {
				display: flex;
				flex-wrap: wrap;
			}
		}
		.kb-checkbox-item, .kb-radio-item {
			display: flex;
			margin: 0;
			align-items: center;
		}
		.kb-radio-style-inline {
			.kb-checkbox-item:not(:first-child), .kb-radio-item:not(:first-child) {
				margin-left: 0.8em;
			}
		}
		&.kb-input-size-custom {
			.kb-text-style-field {
				min-height: 0;
				padding:10px;
			}
		}
		&.kb-input-size-small {
			.kb-text-style-field {
				min-height: 28px;
				padding: 5px 10px;
			}
		}
		&.kb-input-size-large {
			.kb-text-style-field {
				min-height: 60px;
				padding: 16px 16px;
			}
		}
		.kb-forms-submit {
			z-index: 1;
			position: relative;
			padding: 8px 16px;
			line-height: 1.8;
			cursor: pointer;
			font-size: 18px;
			text-shadow:none;
			border-width:0px;
			border-radius: 3px;
			border-color:var( --global-palette-btn-bg, #1768ea );
			background:var( --global-palette-btn-bg, #1768ea );
			color: var( --global-palette-btn, #ffffff);
			display: flex;
			text-align: center;
			justify-content: center;
			border-style: solid;
			overflow: hidden;
			transition: all .3s ease-in-out;
			&.kb-button-size-small {
				padding: 4px 8px;;
				font-size: 16px;
			}
			&.kb-button-size-large {
				padding: 12px 24px;
				font-size: 20px;
			}
			&.kb-button-width-full {
				width: 100%;
			}
			&:hover {
				border-color:var( --global-palette-btn-bg-hover, #1768ea );
				color: var(--global-palette-btn-hover, #ffffff );
				background: var(--global-palette-btn-bg-hover, #1768ea );
			}
		}
		.kb-forms-submit::before {
			position: absolute;
			content: "";
			top: 0;
			right: 0;
			bottom: 0;
			left: 0;
			z-index: -1;
			opacity: 0;
			transition: all .3s ease-in-out;
		}
		.kb-forms-submit:hover::before {
			opacity: 1;
		}
		.kb-field-help {
			color: var( --global-palette6, #777 );
			margin: 2px 0 5px 0;
			font-size: 80%;
			font-style: italic;
			display: block;
			flex-basis: 100%;
			width: 0;
		}
		a.kb-accept-link {
			display: block;
			flex-basis: 100%;
			width: 0;
		}
		.kb-field {
			justify-content: inherit;
			text-align: inherit;

			.kb-checkbox-item, .kb-radio-item {
				justify-content: inherit;
				text-align: inherit;
			}
		}
	}
	input.kadence-blocks-field.verify {
		opacity: 0;
		position: absolute;
		top: 0;
		left: 0;
		height: 0;
		width: 0;
		z-index: -1;
	}
}
.kadence-blocks-form-warning {
    background: #fff5f5;
    margin-top: 10px;
    padding: 10px;
    border-radius: 2px;
    border: 1px solid #fc8181;
    color:#c53030;
    font-weight:bold;
}
.kb-form-error-msg {
    background: #fff5f5;
    margin-top: 10px;
    padding: 8px;
    border-radius: 2px;
    border: 1px solid #fc8181;
    color: #c53030;
    font-weight: bold;
    width: 100%;
    text-align: left;
}
.kb-form.kb-form-has-error {
	align-items: flex-start;
}
.kb-form .kadence-blocks-form-field .kb-text-style-field.has-error:not(.missingclass) {
    border-color: #c53030;
}
.kadence-blocks-form-success {
    background: #ebf8ff;
    margin-top: 10px;
    padding: 10px;
    border-radius: 2px;
    border: 1px solid #4299e1;
    color:#2b6cb0;
    font-weight:bold;
}
.kb-form-loading {
	position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(255,255,255,0.7);
	z-index: 10;
	display:flex;
	align-items: flex-end;
	justify-content: center;
}
.kb-form-loading-spin {
	display: inline-block;
	position: relative;
	width: 64px;
	height: 64px;
	div {
		position: absolute;
		top: 27px;
		width: 11px;
		height: 11px;
		border-radius: 50%;
		background: rgba(0,0,0,.7);
		animation-timing-function: cubic-bezier(0, 1, 1, 0);
	}
	div:nth-child(1) {
		left: 6px;
		animation: kb-form-ellipses1 0.6s infinite;
	}
	div:nth-child(2) {
		left: 6px;
		animation: kb-form-ellipses2 0.6s infinite;
	}
	div:nth-child(3) {
		left: 26px;
		animation: kb-form-ellipses2 0.6s infinite;
	}
  	div:nth-child(4) {
		left: 45px;
		animation: kb-form-ellipses3 0.6s infinite;
	}
}
@keyframes kb-form-ellipses1 {
	0% {
		transform: scale(0);
	}
	100% {
		transform: scale(1);
	}
}
@keyframes kb-form-ellipses3 {
	0% {
		transform: scale(1);
	}
	100% {
		transform: scale(0);
	}
}
@keyframes kb-form-ellipses2 {
	0% {
		transform: translate(0, 0);
	}
	100% {
		transform: translate(19px, 0);
	}
}
@media (min-width: 768px) and (max-width: 1024px) {
	.kb-form {
		.kadence-blocks-form-field {
			&.kb-field-tablet-width-20 {
				width:20%;
			}
			&.kb-field-tablet-width-25 {
				width:25%;
			}
			&.kb-field-tablet-width-33 {
				width:33.33%;
			}
			&.kb-field-tablet-width-40 {
				width:40%;
			}
			&.kb-field-tablet-width-50 {
				width:50%;
			}
			&.kb-field-tablet-width-60 {
				width:60%;
			}
			&.kb-field-tablet-width-66 {
				width:66.66%;
			}
			&.kb-field-tablet-width-75 {
				width:75%;
			}
			&.kb-field-tablet-width-80 {
				width:80%;
			}
			&.kb-field-tablet-width-100 {
				width:100%;
			}
			&.kb-field-tablet-width-unset {
				width:auto;
			}
		}
	}
}
@media (max-width: 767px) {
	.kb-form {
		.kadence-blocks-form-field {
			&.kb-field-mobile-width-20 {
				width:20%;
			}
			&.kb-field-mobile-width-25 {
				width:25%;
			}
			&.kb-field-mobile-width-33 {
				width:33.33%;
			}
			&.kb-field-mobile-width-40 {
				width:40%;
			}
			&.kb-field-mobile-width-50 {
				width:50%;
			}
			&.kb-field-mobile-width-60 {
				width:60%;
			}
			&.kb-field-mobile-width-66 {
				width:66.66%;
			}
			&.kb-field-mobile-width-75 {
				width:75%;
			}
			&.kb-field-mobile-width-80 {
				width:80%;
			}
			&.kb-field-mobile-width-100 {
				width:100%;
			}
			&.kb-field-mobile-width-unset {
				width:auto;
			}
		}
	}
}

